package com.namkyung.exchange_service.domain;

public enum TransactionType {
    DEPOSIT, EXCHANGE
}
