@startuml
' 스타일 설정
skinparam classAttributeIconSize 0
skinparam linetype ortho

' 엔티티
class User {
  - Integer userId
  - String userName
  - Long balance
  --
  + deposit(Long amount)
  + withdraw(Long amount)
}

class ExchangeTransaction {
  - Integer exchangeId
  - User exchangeUser
  - TransactionType type
  - Long fromCurrency
  - Long toCurrency
  - Long amount
  - Double rate
  - LocalDateTime timestamp
}

enum TransactionType {
  DEPOSIT
  EXCHANGE
}

' 레포지토리 (Spring Data JPA 인터페이스)
interface UserRepository
interface ExchangeTransactionRepository

' 서비스
class UserService {
  + createUser(String userName, Long balance) : User
  + deposit(Integer userId, Long amount) : User
  + exchange(Integer userId, TransactionType currencyType, Double rate, Long amount) : User
}

' 관계 설정
UserRepository ..> User : manages
ExchangeTransactionRepository ..> ExchangeTransaction : manages

UserService --> UserRepository
UserService --> ExchangeTransactionRepository
UserService --> User
UserService --> ExchangeTransaction
ExchangeTransaction --> User : "exchangeUser"

@enduml